@@ -1,5 +1,5 @@
 name    = Config-Model
-version = 1.235
+version = 1.236
 author  = Dominique Dumont
 author  = Krzysztof Tyszecki
 license = LGPL_2_1
@@ -22,9 +22,8 @@ Parse::RecDescent = 1.90.0
 Scalar::Util      = 0 ;-- provided by perl 5.8.0
 Exception::Class  = 0
 Carp::Assert::More = 0
-Moose             = 0
-MooseX::StrictConstructor = 0
-MooseX::Singleton = 0
+Any::Moose             = 0
+MouseX::StrictConstructor = 0
 Hash::Merge       = 0.12
 File::HomeDir     = 0
 ; should be part of core perl since perl5.003007
@@ -32,6 +31,9 @@ File::HomeDir     = 0
 IO::File          = 0 
 ; YAML backend
 YAML::Any         = 0.303
+
+; To load annotations for Perl data
+Pod::POM          = 0
 
 ; For C::M::Debian::Dependency
 LWP::Simple       = 0
