@@ -17,6 +17,9 @@
 	* Model: added author, copyright, license fields. This data is not used by
 	  Config::Model, but can be used in the user interface or to generate config
 	  class doc
+	* AnyThing: Fix parsing of multi line annotations. Now use Pod::POM 
+	  to load annocation from Pod document
+	* dist.ini: Depends on Pod::POM
 
 2011-03-01 Dominique Dumont  <domi.dumont@free.fr> 1.235
     
